--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,7 @@ Loading bar :
 (later) loading bar is still useless for now, only appears briefly right before the end of the process, but that's not an urgent task.
 
 Sites :
-density number should display number of sites only instead of 0.0-2.0 value. number of sites should go from 0 to 20000 with default value being 10000.
+Density number should go from 0 to 20000 sites with default value being 10000, it should not display the normalized 0-1 or 0-2 value at all.
 
 Elevation :
 
@@ -11,26 +11,25 @@ Zones :
 This one should be implemented at some point but not yet.
 
 Paths :
-Single segment paths still don't work.
-Visual feedback to indicate the selected path is still way to big (like currently 200px wide instead of 5px) also width of it should not depend on level of zoom, it should be always about 5px.
-Flattest slope bias is still very subtle, what if it goes like 0-200 instead of 0.5-20 ?
-"shortest" and "flattest" modes could now be merge into one (where "shortest" would be handles by setting flattest slope bias to 0.0).
-Avoid water works, but sometimes still goes into water, it should totally avoid it if possible.
+Single segment paths still don't work. "Ends" mode seems to only register single coordinate, not start and end.
+Route mode slider can now skip the third option that has been merges to the second one.
 
 Struct :
-There should be a slider for structure size (for the next structs to be placed).
-Structures should be able to be places either side of paths (closer to the mouse cursor), not just one side.
-There should be a hierarchy of things the structures should be allowed to snap to : paths first, other structures next, then frontier between land and water, then there will be more of those but we'll get to it later.
+Structure angle should follow normals even when snapping to coastlines or frontiers.
 
 Labels :
 Label should be attributed to one or more elements on the map, or more arbitrarily placed.
 Display a list of editable labels to the right side same logic than for paths tab, we'll use it later to highlight associated elements and display logic.
 
 Rendering :
-Path and labels should be displayed on top of zones and water.
+Path, structures and labels should be displayed on top of zones and water (and in this order).
 (later) rendering should have a black an white option.
 (later) zones should have options to be replaced by pattern of items (eg place trees for forest instead of green color).
 
 Editable types : (for anywhere applicable: paths, biomes, etc)
 The way it works should be : a list of colors with overlay label text. this list has a visual feedback showing which is selected. 
 Below the list are a list of parameters for the selected type including the label for selected type; label feels like a text input area and is rewritable.
+
+General :
+Should we reorganize the number of .pde files potentially adding some to make it more consistent and easy to search?
+Read the initial intentions document, exctact missing features and idead, add them to this todo list as "(later)" items, then remove the doc.
