--- a/todo.txt
+++ b/todo.txt
@@ -12,22 +12,22 @@ Zones :
 This one should be implemented at some point but not yet.
 
 Paths :
-Single segment paths still don't work, it should be pretty simple though: first click= starting coordinate, second click = ending coortinate, this is a new segment and should register and display.
-Paths in the list of paths should display their number of segments and total length.
+Single segment paths still don't work, it should be pretty simple though: first click= starting coordinate, second click = ending coortinate, this is a new segment (right now it seems to be somehow registered but fails to display as an actual segment).
+Paths list : text height should be taken into account when displaying number of segments and length so not so overlap with anything.
+Paths list : some button fail to press possibly because of their current placement or UI state, might be fixed along with the point above.
+Flatest slope slider default value should be 0. Bug: mouse x mapping seems based on max value 20 while max value is 200 (correct value should be 200 in both cases).
 (later) rivers could have an option that make them start small and end bigger when reaching the sea (this needs connection analysis, pathfinding etc when using multiple segments, to compute segment proximity to sea).
 
 Struct :
-Structure snapping to any frontier should be similar to when snapping to paths: snaps to either side with a small margin like how a house is placed to a road, not right in the middle of it.
-Structure should also snap to other structures outlines.
+Structures should not snap to frontiers between two sites whose biome, zone (tbd later) and water state is the same.
 (later) add other kind of structures : rectangles, regular polygons, circles, all with appropriate sliders if needed.
+(later) strure should be removable, grouppable, and displayed as a list.
 
 Labels :
-Label should be attributed to one or more elements on the map, or more arbitrarily placed.
+(later) Label should be attributed to one or more elements on the map, or more arbitrarily placed.
 Display a list of editable labels to the right side same logic than for paths tab, we'll use it later to highlight associated elements and display logic.
 
 Rendering :
-Path, structures and labels should be displayed on top of zones and water (and in this order).
-When checking "water" but not "biomes", water should still display.
 (later) rendering should have a black an white option.
 (later) water should have a "contour lines" option (based on proximity from coastline).
 (later) elevation should have a "contour lines" option (based on elevation landmarks).
