--- a/todo.txt
+++ b/todo.txt
@@ -15,7 +15,6 @@ Zones :
 This one should be implemented at some point but not yet.
 
 Paths :
-Elevation for this mode should be discretized (eg instead of having all shades between darker and brighter, have say 16 of them, make that an exposed variable in the code).
 Single segment paths still don't work. This is a seeminlgy simple yet persistent error so we need to talk about this.
 Paths list : text height should be taken into account when displaying number of segments and length so not so overlap with anything.
 Paths list : some button fail to press possibly because of their current placement or UI state, might be fixed along with the point above.
@@ -23,7 +22,7 @@ Flatest slope slider default value should be 0. Bug: mouse x mapping seems based
 (later) rivers could have an option that make them start small and end bigger when reaching the sea (this needs connection analysis, pathfinding etc when using multiple segments, to compute segment proximity to sea).
 
 Struct :
-Elevation for this mode should be discretized (using same variable than paths).
+Structure outlines should count as snapping edges (new structs being placed on the outside only).
 (later) snapping lines could be refined (eg frontier "normals" often appear in addition to frontier while they should not)
 (later) add other kind of structures : rectangles, regular polygons, circles, all with appropriate sliders if needed.
 (later) strure should be removable, grouppable, and displayed as a list.
@@ -47,3 +46,5 @@ General :
 Should we reorganize the number of .pde files potentially adding some to make it more consistent and easy to search?
 Read the initial intentions document, exctact missing features and idead, add them to this todo list as "(later)" items, then remove the doc.
 Define a precise lexicon and homogenize code and ui labels.
+Refactor, optimize etc.
+Multithreading could be used for cpu intensive tasts such as pathfinding or voronoi.
