--- a/todo.txt
+++ b/todo.txt
@@ -15,14 +15,14 @@ Zones :
 This one should be implemented at some point but not yet.
 
 Paths :
-Single segment paths still don't work. This is a seeminlgy simple yet persistent error so we need to talk about this.
+(later) Single segment paths still don't work. This is a seeminlgy simple yet persistent error so we need to talk about this.
 Paths list : text height should be taken into account when displaying number of segments and length so not so overlap with anything.
 Paths list : some button fail to press possibly because of their current placement or UI state, might be fixed along with the point above.
 Flatest slope slider default value should be 0. Bug: mouse x mapping seems based on max value 20 while max value is 200 (correct value should be 200 in both cases).
 (later) rivers could have an option that make them start small and end bigger when reaching the sea (this needs connection analysis, pathfinding etc when using multiple segments, to compute segment proximity to sea).
+possible optimization : remove free points too close to each other, only consider points visible on the window.
 
 Struct :
-Structure outlines should count as snapping edges (new structs being placed on the outside only).
 (later) snapping lines could be refined (eg frontier "normals" often appear in addition to frontier while they should not)
 (later) add other kind of structures : rectangles, regular polygons, circles, all with appropriate sliders if needed.
 (later) strure should be removable, grouppable, and displayed as a list.
