--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@ Loading bar :
 Sites :
 The sites placement is so much slower than before and I'm not sure why, can we optimize this? (eg the voronoi pass could be computer only on demand when necessary?)
 (later) There could be a "subdivide" button that splits each existing site in subregions (eg draws center to edges lines).
+(later) Offer quick placement presets: pure random, even/poisson-ish grid, or manual only.
 (later) Sites should probably be renamed to cells in the UI.
 
 Elevation :
@@ -13,12 +14,17 @@ Biomes :
 
 Zones :
 This one should be implemented at some point but not yet.
+(later) Support multiple region layers (Biome, Admin, user-defined) with per-cell values and painting tools (brush/rect selection/eyedropper).
 
 Paths :
 (later) Single segment paths still don't work. This is a seeminlgy simple yet persistent error so we need to talk about this.
 Paths list : text height should be taken into account when displaying number of segments and length so not so overlap with anything.
 Paths list : some button fail to press possibly because of their current placement or UI state, might be fixed along with the point above.
 Flatest slope slider default value should be 0. Bug: mouse x mapping seems based on max value 20 while max value is 200 (correct value should be 200 in both cases).
+(later) Adding/editing paths should default to snapping vertices to nearest cell center (or structure), with per-vertex snapping info stored.
+(later) Path editing tools: click to add/remove vertices, drag vertices, inline per-segment weight handles, label editing per path.
+(later) Path grouping: optional groupId for higher-level objects (road network, river system).
+(later) Add path labels and path type defaults (width/style) in legend UI.
 (later) rivers could have an option that make them start small and end bigger when reaching the sea (this needs connection analysis, pathfinding etc when using multiple segments, to compute segment proximity to sea).
 possible optimization : remove free points too close to each other, only consider points visible on the window.
 
@@ -26,10 +32,12 @@ Struct :
 (later) snapping lines could be refined (eg frontier "normals" often appear in addition to frontier while they should not)
 (later) add other kind of structures : rectangles, regular polygons, circles, all with appropriate sliders if needed.
 (later) strure should be removable, grouppable, and displayed as a list.
+(later) Placement should snap to nearest path/structure and allow rotation/resize handles; support group min-zoom-to-expand (city/forest clusters).
 
 Labels :
 (later) Label should be attributed to one or more elements on the map, or more arbitrarily placed.
 Display a list of editable labels to the right side same logic than for paths tab, we'll use it later to highlight associated elements and display logic.
+(later) Label types with default style; attach to cells/paths/structures/groups or free position; anchor controls; option to follow path curvature.
 
 Rendering :
 (later) rendering should have a black an white option.
@@ -37,10 +45,23 @@ Rendering :
 (later) elevation should have a "contour lines" option (based on elevation landmarks).
 (later) zones should have options to be replaced by pattern of items (eg place trees for forest instead of green color).
 (later) elevation lightning could feel more gradient-like or dither-like rather than just unified polygons.
+(later) Respect LOD rules: constant stroke widths, hide/show groups vs members depending on zoom, optional merging of dense structures.
 
 Editable types : (for anywhere applicable: paths, biomes, etc)
 The way it works should be : a list of colors with overlay label text. this list has a visual feedback showing which is selected. 
 Below the list are a list of parameters for the selected type including the label for selected type; label feels like a text input area and is rewritable.
+(later) Legend supports categories (zones, paths, structures, labels) with editable names/colors/default widths/sizes and exporting the legend for reference.
+(later) Region layer management in legend: add/remove layers (Biome, Admin, custom) and assign zone types per layer.
+
+Export :
+(later) JSON export/import (human-readable) with legend, layers, cells, paths, structures, groups, labels, view defaults.
+(later) SVG export with layers (background, borders, paths, structures, labels, legend) and data-* / class attributes for type ids.
+
+Zoom / LOD :
+(later) Keep line widths stable in screen space and provide per-type min zoom before expanding groups into members.
+
+Generative modes :
+(later) Deterministic, opt-in generators (fill missing biomes by noise, auto minor roads near cities, small villages) that never overwrite user edits.
 
 General :
 Should we reorganize the number of .pde files potentially adding some to make it more consistent and easy to search?
