--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,5 @@
 
 Loading bar :
-(done) Voronoi rebuild now uses spatial bins/nearest neighbors for a fast approximate pass; loading bar stays responsive.
 (later) Try to optimize further.
 
 Sites :
@@ -8,6 +7,7 @@ Site placement slowness was traced to neighbor/snap rebuilding; optimized those 
 (later) There could be a "subdivide" button that splits each existing site in subregions (eg draws center to edges lines).
 (later) Offer quick placement presets: pure random, even/poisson-ish grid, or manual only.
 (later) Sites should probably be renamed to cells in the UI.
+(later) should probably be called "grid" and "cell" instead of sites/site, at least in the UI, ideally in the code as well
 
 Elevation :
 
@@ -29,15 +29,16 @@ Paths :
 (later) to prevent hanging could we start with straightforward route and each frame refine it to comply with parameters?
 
 Struct :
-(later) snapping lines could be refined (eg frontier "normals" often appear in addition to frontier while they should not)
 (later) add other kind of structures : rectangles, regular polygons, circles, all with appropriate sliders if needed.
 (later) structres should be removable, grouppable, and displayed as a list.
 (later) Placement should snap to nearest path/structure and allow rotation/resize handles; support group min-zoom-to-expand (city/forest clusters).
 (later) snapping magnetism should probably be zoom-invarient (so that if we need more precision we can zoom and the snap is relatively smaller)
+(later) option to either not snap at all, snap next to paths, snap right in the middle of paths
+(later) slider for angle offset (also per-struct)
 
 Labels :
 (later) Label should be attributed to one or more elements on the map, or more arbitrarily placed.
-Display a list of editable labels to the right side same logic than for paths tab, we'll use it later to highlight associated elements and display logic.
+(later) Display a list of editable labels to the right side same logic than for paths tab, we'll use it later to highlight associated elements and display logic.
 (later) there should be a selectable "layer" to define what to currently add labels to (biomes, zones, structures, arbitrary locations)
 (later) Label types with default style; attach to cells/paths/structures/groups or free position; anchor controls; option to follow path curvature.
 
@@ -69,3 +70,4 @@ General :
 (later) Refactor, optimize etc.
 (later) Multithreading could be used for cpu intensive tasts such as pathfinding or voronoi.
 (later) MapModel .pde file is very long, could it be subdivided? (might be hard since single class)
+(later) on each panel, find a place to write non UI controls (role mouse buttons, wheel, keys such as DEL etc)
