--- a/todo.txt
+++ b/todo.txt
@@ -4,35 +4,29 @@ Loading bar :
 
 Sites :
 (later) There could be a "subdivide" button that splits each existing site in subregions (eg draws center to edges lines).
-(later) Offer quick placement presets: pure random, even/poisson-ish grid, or manual only.
-(later) Sites should probably be renamed to cells in the UI.
 (later) should probably be called "grid" and "cell" instead of sites/site, at least in the UI, ideally in the code as well
 
 Elevation :
 
 Biomes :
-the "set underwater to biome" button label should be a but shorter and the button should be placed the next line (shift all other buttons from there)
 
 Zones :
 (later) a first-pass has been done but we need to redo this in a lot more specific way
 
 Paths :
-(later) Single segment paths still don't work. This is a seeminlgy simple yet persistent error so we need to talk about this.
-(later) Adding/editing paths should default to snapping vertices to nearest cell center (or structure), with per-vertex snapping info stored.
-(later) Path editing tools: click to add/remove vertices, drag vertices, inline per-segment weight handles, label editing per path.
-(later) Path grouping: optional groupId for higher-level objects (road network, river system).
-(later) Add path labels and path type defaults (width/style) in legend UI.
-(later) paths (typically rivers) could have an option that make them start small and end bigger when reaching the sea (this needs connection analysis, pathfinding etc when using multiple segments, to compute segment proximity to sea, parameter weight would be the bigger weight next to the sea).
-(later) fix ambiguity between paths (made of routes), routes (made of consecutive segments), segments (straight line from point A to point B)
-(later) why does the path confirmation take so much time? it only needs to push the previewed path into the valid list...
+(maybe later) Single segment paths still don't work. This is a seeminlgy simple yet persistent error so we need to talk about this.
+(maybe later) when tracing a path, starting position shoud have a visual feedback
+(maybe later) bug : sometimes when tracing, if mouse is slightly too far from ending position, ending circle appears but no path appears
+(maybe later) paths (typically rivers) could have an option that make them start small and end bigger when reaching the sea (this needs connection analysis, pathfinding etc when using multiple segments, to compute segment proximity to sea, parameter weight would be the bigger weight next to the sea).
+(later) fix ambiguity between paths (made of routes), routes (made of consecutive segments), segments (straight line from point A to point B) both inui and ideally code
+(maybe later) why does the path confirmation take so much time? it only needs to push the previewed path into the valid list...
 (later) needs more optimization
 (later) to prevent hanging could we start with straightforward route and each frame refine it to comply with parameters?
 
 Struct :
-(later) add other kind of structures : rectangles, regular polygons, circles, all with appropriate sliders if needed.
-(later) structres should be removable, grouppable, and displayed as a list.
+(maybe later) add other kind of structures : rectangles, regular polygons, circles, all with appropriate sliders if needed.
+(maybe later) structres should be removable, grouppable, and displayed as a list.
 (later) snapping magnetism should probably be zoom-invarient (so that if we need more precision we can zoom and the snap is relatively smaller)
-(later) option to either not snap at all, snap next to paths, snap right in the middle of paths
 
 Labels :
 (later) Label should be attributed to one or more elements on the map, or more arbitrarily placed.
@@ -44,29 +38,22 @@ Rendering :
 (later) elevation should have a "contour lines" option (based on elevation landmarks).
 (later) zones should have options to be replaced by pattern of items (eg place trees for forest instead of green color).
 (later) elevation lightning could feel more gradient-like or dither-like rather than just unified polygons.
-(later) Respect LOD rules: constant stroke widths, hide/show groups vs members depending on zoom, optional merging of dense structures.
+(later) Respect LOD rules: constant stroke widths, hide/show groups vs members depending on zoom, optional merging visually of dense structures.
 (later) black and white mode should be more of a "bitmap" with no greyscale (replace them with patterns and lines if needed).
+(later) Exporting the legend for reference.
+(later) Comments exportable as custom format
 
 Editable types : (for anywhere applicable: paths, biomes, etc)
 (later) Visually show which parameters "belong" to a type or to a more general part of the interface.
-(later) Legend supports categories (zones, paths, structures, labels) with editable names/colors/default widths/sizes and exporting the legend for reference.
-(later) Region layer management in legend: add/remove layers (Biome, Admin, custom) and assign zone types per layer.
 
 Export :
 (later) JSON export/import (human-readable) with legend, layers, cells, paths, structures, groups, labels, view defaults.
 (later) SVG export with layers (background, borders, paths, structures, labels, legend) and data-* / class attributes for type ids.
 
-Zoom / LOD :
-(later) Keep line widths stable in screen space and provide per-type min zoom before expanding groups into members.
-
-Generative modes :
-(later) Deterministic, opt-in generators (fill missing biomes by noise, auto minor roads near cities, small villages) that never overwrite user edits.
-
 General :
 (later) Define a precise lexicon and homogenize code and ui labels.
 (later) Refactor, optimize etc.
 (later) Multithreading could be used for cpu intensive tasts such as pathfinding or voronoi.
-(later) MapModel .pde file is very long, could it be subdivided? (might be hard since single class)
-(later) on each panel, find a place to write non UI controls (role mouse buttons, wheel, keys such as DEL etc)
-(later) group things visually when unzooming
-(later) option to generate details for zooming
+(later) MapModel.pde file is very long, could it be subdivided? (might be hard since single class)
+(maybe later) on each panel, find a place to write non UI controls (role mouse buttons, wheel, keys such as DEL etc)
+(later) option to generate details (about everything) for zooming
